; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_link.c_test_core_link__stat_dangling_symlink_directory.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_link.c_test_core_link__stat_dangling_symlink_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"stat_nonexistent\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"stat_dangling_dir\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"stat_nonexistent_dir\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"stat_dangling\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_link__stat_dangling_symlink_directory() #0 {
  %1 = alloca %struct.stat, align 4
  %2 = call i32 (...) @should_run()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 (...) @clar__skip()
  br label %6

6:                                                ; preds = %4, %0
  %7 = call i32 @do_symlink(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %8 = call i32 @p_stat(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), %struct.stat* %1)
  %9 = call i32 @cl_must_fail(i32 %8)
  %10 = call i32 @p_stat(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0), %struct.stat* %1)
  %11 = call i32 @cl_must_fail(i32 %10)
  ret void
}

declare dso_local i32 @should_run(...) #1

declare dso_local i32 @clar__skip(...) #1

declare dso_local i32 @do_symlink(i8*, i8*, i32) #1

declare dso_local i32 @cl_must_fail(i32) #1

declare dso_local i32 @p_stat(i8*, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
